--- a/style.css
+++ b/style.css
@@ -191,8 +191,16 @@ body {
         width: 100vw
     }
 
+    #title {
+        font-size: 3rem;
+    }
+
     #start-Popup {
         margin-left: -50vw;
+    }
+
+    #start-Button {
+        text-align: center;
     }
 }
 
